Fixes for OC 1.0.0-rc2-15965

--- a/Etch.OrchardCore.SEO.csproj
+++ b/Etch.OrchardCore.SEO.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>0.7.2-rc2</Version>
@@ -15,17 +15,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Etch.OrchardCore.Fields" Version="0.8.1-rc1" />
+    <PackageReference Include="Etch.OrchardCore.Fields" Version="0.11.4-rc2" />
     <PackageReference Include="FluentExcel" Version="2.2.0" />
-    <PackageReference Include="OrchardCore.Admin" Version="1.0.0-rc2-13450" />
-    <PackageReference Include="OrchardCore.Autoroute" Version="1.0.0-rc2-13450" />
-    <PackageReference Include="OrchardCore.ContentManagement" Version="1.0.0-rc2-13450" />
-    <PackageReference Include="OrchardCore.ContentManagement.Display" Version="1.0.0-rc2-13450" />
-    <PackageReference Include="OrchardCore.Data.Abstractions" Version="1.0.0-rc2-13450" />
-    <PackageReference Include="OrchardCore.Media" Version="1.0.0-rc2-13450" />
-    <PackageReference Include="OrchardCore.Module.Targets" Version="1.0.0-rc2-13450" />
-    <PackageReference Include="OrchardCore.Navigation.Core" Version="1.0.0-rc2-13450" />
-    <PackageReference Include="OrchardCore.ResourceManagement" Version="1.0.0-rc2-13450" />
+    <PackageReference Include="OrchardCore.Admin" Version="1.0.0-rc2-15966" />
+    <PackageReference Include="OrchardCore.Autoroute" Version="1.0.0-rc2-15966" />
+    <PackageReference Include="OrchardCore.ContentManagement" Version="1.0.0-rc2-15966" />
+    <PackageReference Include="OrchardCore.ContentManagement.Display" Version="1.0.0-rc2-15966" />
+    <PackageReference Include="OrchardCore.Data.Abstractions" Version="1.0.0-rc2-15966" />
+    <PackageReference Include="OrchardCore.Media" Version="1.0.0-rc2-15966" />
+    <PackageReference Include="OrchardCore.Module.Targets" Version="1.0.0-rc2-15966" />
+    <PackageReference Include="OrchardCore.Navigation.Core" Version="1.0.0-rc2-15966" />
+    <PackageReference Include="OrchardCore.ResourceManagement" Version="1.0.0-rc2-15966" />
   </ItemGroup>
 
   <ItemGroup>
